test/files/neg/t12647.check
Test_3.scala:6: error: value value is not a member of Result
  println(resolver.resolve.value)
                           ^
1 error
